同步于: 10月30日16时52分

--- a/pages/p8/950916.md
+++ b/pages/p8/950916.md
@@ -1,4 +1,4 @@
-### “精三分 傻三分 留下三分给子孙”太精辟了(图)
+### 夫妻吵架做5事 矛盾深化分手快(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,13 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="郑板桥 聪明 糊涂 专业" src="https://img3.secretchina.com/pic/2020/2-5/p2620122a782738698-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="夫妻 婚姻 离婚 缘分" src="https://img3.secretchina.com/pic/2020/4-28/p2679722a217637399-ss.jpg"/>
   <br>
-   “精三分傻三分，留下三分给子孙”太精辟了。（图片来源：Adobe Stock）
+   <strong>
+    夫妻
+   </strong>
+   吵架做5事，矛盾深化分手快。（以下图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,63 +24,77 @@
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  《永恒的五十分钟》（长春电视插播事件改编） ](http://141.164.39.94:10000/videos/news/ComingForYou-2.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### [ 💥 李锐评习近平：没想到文化程度这么低（李锐是毛泽东秘书、习仲勋挚友、前中组部副部长）](http://141.164.39.94:10000/videos/res/Communist/lirui-xi.html)
-
-#### [ 💥 江泽民失态怒斥并威胁香港记者（ “图样图森破”，“谈笑风生” ）](http://141.164.39.94:10000/videos/res/realjzm/naive.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/郑板桥" target="_blank">
-    郑板桥
-   </span>
-  </strong>
-  都说：“
-  <strong>
-   聪明
-  </strong>
-  难，
-  <strong>
-   糊涂
-  </strong>
-  难，由聪明而入糊涂更难”。
+  一对情侣结为
+  <span href="https://www.secretchina.com/news/gb/tag/夫妻" target="_blank">
+   夫妻
+  </span>
+  ，要携手共度一生，这过程要说没有矛盾是很难的。毕竟生活就是柴米油盐酱醋茶，两个家庭条件和成长环境不同的人要一起生活，摩擦难免，所以夫妻之间吵架是很正常的。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  上了年纪的老人之间经常流行一句老话：“精三分、傻三分、留下三分给子孙”。
- </p>
- <p>
-  意思是做人不要太过于精明，如果这一代的人都特别的精明，那么下一代就很可能出现傻子、呆子。它意在提醒人们做人不要太过于精明，算计这个算计那个的。
- </p>
- <p>
+  俗话说“床头吵架床尾和”，指的就是夫妻的矛盾只是短暂的，吵过和好就没事了。但如果在彼此闹矛盾的时候做底下5件事，就容易加深彼此矛盾，终至
   <strong>
-   ●精三分
-  </strong>
- </p>
- <p>
-  <strong>
-   1、精三分要用到自己的
-   <span href="https://www.secretchina.com/news/gb/tag/专业" target="_blank">
-    专业
+   <span href="https://www.secretchina.com/news/gb/tag/离婚" target="_blank">
+    离婚
    </span>
-   上去。
+  </strong>
+  。
+ </p>
+ <p>
+  <strong>
+   1
+  </strong>
+  <strong>
+   、动不动就提离婚
   </strong>
  </p>
  <p>
-  因为知识是与时俱进的，如果你不去不断更新知识和学习新的知识，你学到的东西在社会上就会慢慢被淘汰。要把理论同实践结合起来，把现代科学发展的成果运用到自己的专业中去，做事精益求精，才能不被淘汰。
+  能够走到一起，结发为夫妻，是很难得的
+  <strong>
+   缘分
+  </strong>
+  ，所以一定要好好维护这段
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/婚姻" target="_blank">
+    婚姻
+   </span>
+  </strong>
+  ，无论如何都不要轻易提离婚。
+ </p>
+ <p>
+  有的人吵架总爱把离婚挂嘴上，事后和好时，就以为船过水无痕，但绝非如此。只要每提一次离婚，都会在彼此心里种下一颗种子，然后慢慢长大，等到有一天再提及时，它就会整个蔓延开来，到时候就算离婚只是气话，也很有可能变成真离婚。
+ </p>
+ <p>
+  尤其是每次都拿离婚要挟对方时，哪天对方不想再被要挟，也许就会抱着破罐子破摔的心理。因此既然结婚，就不要把婚姻当儿戏，随意提离婚，那只会造成彼此代沟越来越深。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="能够走到一起，结发为夫妻，是很难得的缘分。" src="https://img3.secretchina.com/pic/2020/8-22/p2760482a810038236-ss.jpg"/>
+  <br>
+   能够走到一起，结发为夫妻，是很难得的缘分。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,7 +110,10 @@
  </center>
  <p>
   <strong>
-   2、精三分要用到生活中去。
+   2
+  </strong>
+  <strong>
+   、离家出走毫无音讯
   </strong>
  </p>
  <center>
@@ -109,7 +129,37 @@
   </div>
  </center>
  <p>
-  要建立自己正确的人生观、价值观，努力把自己融合到社会中去，要能够适应环境，而后经过自己的努力去改造环境。要顺应潮流，大千世界，人人都能生存在这个世界里，我们也能生存的更好。
+  夫妻吵架最蠢的方式，就是离家出走，因为这不但解决不了任何问题，还容易制造新的问题。离家出走常常发生在双方情绪到达最高点时，这时某一方会选择摔门而出，把另一方留在吵架现场。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  从情感上来说，这种行为只会造成更深的伤害，因为一方想离开现场，让双方冷静，但对方在你离开后可能会往不好的方向胡思乱想：到底是露宿街头，还是住到别的女人家里……等等。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这时如果还故意不接电话，那就有可能再点燃彼此的怒火，让事情演变到不可挽回的地步。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -125,7 +175,10 @@
  </center>
  <p>
   <strong>
-   3、精三分要用到处理各种矛盾和问题上。
+   3
+  </strong>
+  <strong>
+   、每次吵架都翻旧账
   </strong>
  </p>
  <center>
@@ -141,7 +194,55 @@
   </div>
  </center>
  <p>
-  学会理智地去平衡问题的矛盾点，处理好每个人的情绪。同时面对挫折的时候，懂得吸取教训，不会在同一地方栽倒两次。
+  根据非正式的调查：10对情侣吵架，有8对都会翻旧账，这种情况女性尤占大多数。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  男人和女人的思维方式不同，他们认为过去的事就过去了，不要再提了。但女人不一样，她们常认为所有的事情都有因果关系，所以每次吵架时，就会开始翻旧账，但这种时候，男人也不可能认真倾听，只会更加生气。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  所以吵架时翻旧账的行为不可取，只会得到反效果。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="十年修得同船渡，百年修得共枕眠。" src="https://img3.secretchina.com/pic/2020/10-30/p2807492a140255497-ss.jpg"/>
+  <br>
+   十年修得同船渡，百年修得共枕眠。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -157,119 +258,11 @@
  </center>
  <p>
   <strong>
-   ●傻三分
+   4
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
   <strong>
-   1、傻三分就是要能吃亏。
+   、告诉父母
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不计较太多得失，管理人能吃亏，就能领导一个团队。个人能吃亏，就能在人群中站住脚。一个家庭能吃亏，肯定能搞好邻里关系。能吃亏的人，吃点小亏。不能吃亏的人，早晚要吃大亏。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   2、傻三分就是要能吃苦。
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  农民能吃苦，所以收获丰收的喜悦；科学家能吃苦，所以攻破了难题成就了伟大；老师能吃苦，所以桃李满天下；学生能吃苦，学习成绩就好；领导能吃苦，群众跟着干的有劲。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一个家庭的人都能吃苦，才能一辈子享福。能吃苦的人吃一阵子苦，不能吃苦的人吃一辈子苦。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   3、傻三分就是要有耐力。
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  要想把事业干成功，必须得有耐力，不能急于求成，走捷径。数学家一生就研究了十个数。世界著名球星一生就研究了一个球。爱迪生经历了那么多次的失败才发明电灯，靠的就是耐力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -288,9 +281,22 @@
   </ins>
  </center>
  <p>
-  <strong>
-   ●留下三分给子孙
-  </strong>
+  夫妻间就算发生再大的矛盾，通常关起门来解决就好了。但有些人就非要告诉自己的父母，希望老人家能出面做主，但这样的方法是很不可取的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  一方面，老人家知道的话，只会为你们操心；其次，公诸天下的结果，也代表不给对方留余地，自然矛盾也很难平息。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -306,39 +312,10 @@
  </center>
  <p>
   <strong>
-   1、要培养子孙热爱学习、肯钻研，博览群书。
+   5
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  留下再多的财产都没用，子孙没有福报一样消耗不起。要博览群书，从书本里吸取营养。不要留给子孙万贯家产，因为富不过三代。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
   <strong>
-   2、要传承给子孙勤劳、善良、踏实的家风。
+   、公告天下
   </strong>
  </p>
  <center>
@@ -354,7 +331,7 @@
   </div>
  </center>
  <p>
-  培养子孙肯吃苦，不怕吃亏的好品质，才能真正在以后帮助到他们。不要传给子孙怕吃苦、怕吃亏、爱占小便宜的坏习惯。
+  有些人平时动不动就爱往朋友圈发讯息，甚至夫妻间发生矛盾时，也要公告天下，让亲朋好友来评评理，有的人甚至还会搞“现场直播”。这种行为是非常不可取的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -369,9 +346,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   3、塑造子孙吃苦耐劳独立自主的能力。
-  </strong>
+  因为，每个人都要面子，发朋友圈或许得到一时的抒发，却会给彼此带来许多不必要的麻烦。而且“清官难断家务事”，要大家评理，常常只会落得让人看笑话的下场，毫无帮助不说，还会加深彼此裂痕。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -386,7 +361,7 @@
   </div>
  </center>
  <p>
-  奋力拚搏的动力，持之以恒的耐力。一个有耐力，肯拚搏的家族，才能金玉满堂，富贵吉祥。
+  夫妻间闹矛盾是很稀松平常的事，但有的人能处理好，而有的人却是越吵越疏远，甚至最后分道扬镳闹离婚。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -401,11 +376,7 @@
   </div>
  </center>
  <p>
-  做人要
-  <span href="https://www.secretchina.com/news/gb/tag/糊涂" target="_blank">
-   糊涂
-  </span>
-  一点，不要太精明。懂得傻三分是一种福气，懂得留三分给子孙是远见和智慧。
+  “十年修得同船渡，百年修得共枕眠。”夫妻本是一体，遇到矛盾不妨静下心来好好交流沟通，两人才能更和谐更幸福，白首偕老。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -419,7 +390,7 @@
    </center>
   </div>
  </center>
- <p style=" margin-bottom: 8px; ">
+ <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
@@ -436,6 +407,11 @@
   </span>
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
+   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+   </span>
+  </center>
+  <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
     </div>
@@ -449,7 +425,7 @@
   </center>
   <center>
    <div>
-    <div id="txt-mid2-t22-2017" style="display: block;  max-height: 351px;  overflow: hidden;">
+    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
      <div id="SC-21xx">
      </div>
      <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
@@ -464,13 +440,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/937600.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/937600.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/937600.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/09/937600.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950916.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950916.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950916.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/30/950916.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/937600.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/950916.md' width='0px' height='0px'/>
