--- a/pages/p7/911140.md
+++ b/pages/p7/911140.md
@@ -1,4 +1,4 @@
-### 海外封杀士气低迷 字节跳动发半月奖金激励员工
+### 神明为什么会对某人特别严厉呢？(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,102 +6,51 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p>
-  【看中国2020年9月8日讯】
-  <strong>
-   TikTok
-  </strong>
-  （抖音国际版）的母公司
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/字节跳动" target="_blank">
-    字节跳动
+ <p style="text-align:center">
+  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
+  <br>
+   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </strong>
-  宣布给全球6万多员工加发半月
-  <strong>
-   奖金
-  </strong>
-  。这个决定让外界感到一些意外，特别是在TikTok在美国和世界多个国家面临生死存亡的紧要关头。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
-   </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  抗争成功典范：2016年湖北仙桃十万人游行示威反垃圾焚烧厂（项目取消，市长下课）](http://141.164.51.119:10000/videos/news/xiantao.html)
-
-#### [ 🔥  年底世界七大趋势｜中共战狼失利，全球反呛｜美中台能开战？川普将连任？](http://141.164.51.119:10000/videos/news/tanghao02.html)
-
-#### [ 🔥  電影《永恆的五十分鐘》片尾曲 - 《找真相》](http://141.164.51.119:10000/videos/news/../legend/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  字节跳动在周二（9月8日）宣布这个决定时说，这个
-  <span href="https://www.secretchina.com/news/gb/tag/奖金" target="_blank">
-   奖金
-  </span>
-  是为了感谢职工在抗击疫情期间所作出的努力。
+  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据美国财经媒体彭博新闻社消息，字节跳动的文件说：“过去几个月，我们一直共同努力对抗病毒以及宏观环境变化挑战。为了感谢大家的努力及奉献，我们将向所有符合资格的员工发放现金奖励。”
- </p>
- <p>
-  所谓获得奖金的资格是指在7月1日到8月31日期间，工作日超过26天的全职员工。奖金将和9月份的工资一起发放。
- </p>
- <p>
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/TikTok" target="_blank">
-    TikTok
-   </span>
-   在美印遭到封杀
+   修行人手摘香莲　惹怒莲花池神
   </strong>
  </p>
  <p>
-  今年8月6日，美国总统
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  (特朗普)签署行政令要求TikTok在45天内将其在美国的业务出售给美国企业，否则将会遭到彻底封杀。川普还在8月14日签署另外一项行政令，要求字节跳动公司在90天内从TikTok撤资。
+  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
  </p>
  <p>
-  川普行政当局对TikTok下此重手的原因是担心这款广受美国用户欢迎的短视频分享应用正在对美国的国家安全、美国公民的个人信息和美国的言论自由环境构成威胁。
+  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  TikTok在美国市场发展很快，目前在美国拥有活跃用户约一亿人，其中主要是年轻人。调查人员发现，TikTok过度收集个人信息，这些信息有可能被转移到中共手中成为
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  攻击美国的武器。TikTok也和微信等其它中国社媒体一样广泛存在内容审查制度，这样的做法会逐步蚕食和破坏美国言论自由环境。
+  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
+ </p>
+ <p>
+  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,7 +65,7 @@
   </div>
  </center>
  <p>
-  TikTok在人口大国印度也面临同样的境遇。今年6月，中国和印度军队在边界发生流血冲突后，印度政府立即封杀了包括TikTok在内的59款应用产品。印度政府信息技术部在公告中说，这些产品存在损害印度主权和完整、印度国防、国家安全方面问题，并在和保护13亿印度人个人隐私信息方面存在令人担忧的问题。
+  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -131,9 +80,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   发奖金以提振士气
-  </strong>
+  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +95,55 @@
   </div>
  </center>
  <p>
-  TikTok在海外遭遇到的毁灭性打击给字节跳动造成了巨大的压力。上个月，刚刚担任TikTok 首席执行官和字节跳动运营总监3个月的凯文·迈耶（ Kevin Mayer）宣布辞职。他在给公司员工的信中说，TikTok一直受到川普政府施压，令品牌结构产生变化，经细心思考公司结构的改变和自己在公司担任的角色，他最后决定辞职。
+  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
+  <br>
+   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +162,7 @@
   </ins>
  </center>
  <p>
-  路透社引用字节跳动公司人士的话说：“TikTok团队，尤其是交易团队一直在夜以继日地工作。”但是，公司遭遇的全球挑战以及凯文·迈耶的辞职给公司上下的士气造成严重的打击。
+  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +177,7 @@
   </div>
  </center>
  <p>
-  字节跳动创始人兼CEO张一鸣在之前发给公司内部的信中表示，公司员工在一片“噪音”之中没日没夜地工作。
+  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -197,11 +192,22 @@
   </div>
  </center>
  <p>
-  受到美国严厉制裁的中国科技巨头
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
-  </span>
-  公司在处境艰难的时候也采取过类似的激励措施。去年11月，华为宣布要拿出20亿元人民币给公司员工发“奋斗特别奖”，人均15万元人民币，以鼓励他们在面临美国制裁而努力工作。
+  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  参考资料：民间故事
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -233,7 +239,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -265,13 +271,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945548.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945548.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945548.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/08/945548.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/945548.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
