--- a/pages/p1/950955.md
+++ b/pages/p1/950955.md
@@ -1,4 +1,4 @@
-### 神明为什么会对某人特别严厉呢？(组图)
+### 疫情四起 网曝四川阆中锦园张飞酒店被封（视频）(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="四川阆中锦园张飞酒店被封全面排查" src="https://img3.secretchina.com/pic/2020/10-30/p2807661a426211993-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
+   四川阆中锦园张飞酒店被封全面排查（图片来源：视频截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,28 +29,60 @@
   </div>
  </div>
  <p>
-  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
+  【看中国2020年10月30日讯】（看中国记者林中宇综合报导）近日，中国大陆
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
+   </span>
+  </strong>
+  疫情四起，10月30日，网曝
+  <strong>
+   四川
+  </strong>
+  省阆中市锦园张飞国际酒店突然被警察封锁，所有的人不得进出，当地疾控中心来了许多防疫人员，对所有的在酒店的人进行排查。但官方媒体对此没有任何报导。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   修行人手摘香莲　惹怒莲花池神
-  </strong>
+  网友发布的视频显示，
+  <span href="https://www.secretchina.com/news/gb/tag/四川" target="_blank">
+   四川
+  </span>
+  省阆中市锦园张飞国际酒店的大门已经被警察封锁，酒店的大厅有几十个身着防护服的防疫人员，对在酒店的人进行核酸检测。拍摄视频的女士说：“全部要做检测，在酒店里面吃饭的一个都不许出门了。好恐怖啊！”
+ </p>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   四川 阆中市 锦园张飞酒店 被警察 疾控中心 封鎖 嚴禁出入 2020年10月30日
+   <span href="https://twitter.com/hashtag/COVID__19?src=hash&amp;ref_src=twsrc%5Etfw">
+    #COVID__19
+   </span>
+   <span href="https://t.co/QsnCSZ1g5d">
+    pic.twitter.com/QsnCSZ1g5d
+   </span>
+  </p>
+  — 白七的纪录 (@Fei_Nigh)
+  <span href="https://twitter.com/Fei_Nigh/status/1322135394876489728?ref_src=twsrc%5Etfw">
+   October 30, 2020
+  </span>
+ </blockquote>
+ <p>
+  对此突发的疫情，截本网发稿，中共官媒没有任何报导，甚至在微博上都没有任何消息。而就在几天前，10月26日，四川省刚刚召开庆功会，表彰“抗击新冠肺炎疫情和防汛救灾”的“先进个人和先进集体”。
  </p>
  <p>
-  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
+  大陆多名防疫专家预测，今年秋冬季节，中国可能爆发第二波
+  <span href="https://www.secretchina.com/news/gb/tag/疫情" target="_blank">
+   疫情
+  </span>
+  。近日，新疆、上海、青岛、河南、江西等地已先后出现疫情。
  </p>
  <p>
-  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
- </p>
- <p>
-  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
- </p>
- <p>
-  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
+  其中新疆喀什地区疏附县爆发大规模群聚感染，之后山东青岛又爆出医院院内感染事件。据山东省青岛市卫健委报告，青岛市第三医院一名护士被确诊，该院定点收治
+  <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+   中共病毒
+  </span>
+  (又称新冠状病毒，COVID-19)患者。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -65,7 +97,7 @@
   </div>
  </center>
  <p>
-  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
+  这名护士10月18日进入隔离封闭病区工作，10月29日核酸检测结果为阳性。71名密切接触者均为隔离封闭状态下人员，目前已实施集中隔离医学观察。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -80,7 +112,7 @@
   </div>
  </center>
  <p>
-  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
+  10月29日，江西省贵溪市也发现一名患者复阳病例。据陆媒报导，49岁男子柳某8月22日核酸检测呈阳性，转入广州市第八医院进行隔离治疗。10月10日，柳某核酸检测转阴性解除隔离。然而，17天后（27日），柳某在江西贵溪市疾控中心核酸检测再次呈阳性，当晚被送至定点医院留院观察诊疗。柳某所居住的小区立刻被封闭，并对相关人员进行排查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,7 +127,50 @@
   </div>
  </center>
  <p>
-  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
+  推特上传出的视频显示，贵溪市某住宅楼，有身穿防护服的工作人员在登记排查，有单元楼被封闭，有感染者被送到贵溪市人民医院进行隔离治疗。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   江西 鷹潭貴溪市 疑似有接觸到感染者 小區控管 2020年10月29日
+   <span href="https://t.co/iuA5yPI8zh">
+    pic.twitter.com/iuA5yPI8zh
+   </span>
+  </p>
+  <center>
+   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+    </div>
+   </div>
+   <div>
+    <center>
+     <div id="div-gpt-ad-1589559869784-0">
+     </div>
+    </center>
+   </div>
+  </center>
+  <center>
+   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
+   </ins>
+  </center>
+  — 白七的纪录 (@Fei_Nigh)
+  <span href="https://twitter.com/Fei_Nigh/status/1321879043369693184?ref_src=twsrc%5Etfw">
+   October 29, 2020
+  </span>
+ </blockquote>
+ <p>
+  河南濮阳县日前也爆出1例武汉肺炎无症状感染者。10月28日晚，官方证实，一名外国返濮男子被检测出武汉肺炎无症状感染。该名男子还曾在隔离期间就去当地KTV唱歌，目前有数名密切接触者已被隔离。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,25 +185,7 @@
   </div>
  </center>
  <p>
-  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
-  <br>
-   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
-  </br>
+  上海方面，大陆微信群组消息指，上海浦东新区花木地区一居家隔离者请水电工上门服务，导致疫情扩散，已有5人确诊，30多户人家被集中隔离。但上海浦东新区官微26日深夜通报辟谣，称10月22日浦东新区有1例境外入境人员在“7+7”隔离期间出现症状，后被确诊，已转运至市公共卫生临床中心治疗。并声称该病例的所有接触者核酸检测结果“均为阴性”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -143,26 +200,7 @@
   </div>
  </center>
  <p>
-  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <center>
-  <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
-  </ins>
- </center>
- <p>
-  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
+  不过，有当地居民向海外媒体爆料称，当地疫情防控已升级，“原来都已经不用戴口罩、量体温了，现在都需要了，还需要扫绿码，感觉回到了疫情之初。”医院就诊室的医生已经全副武装，用上了护目镜、口罩和防护服。当地小区严控人员进出。上海公交车已增加了红外测温仪，身体不合格必须下车。当地疫情真实情况备受关注。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,37 +215,7 @@
   </div>
  </center>
  <p>
-  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  参考资料：民间故事
+  早前，武汉市也出现多名患者复阳的案例，甚至有患者死亡。专家警告说，中共病毒已经发生变异，传染性增强，无症状感染者增多，非常恐怖。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,13 +279,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/950955.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/950955.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/950955.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/30/950955.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/950955.md' width='0px' height='0px'/>
