同步于: 10月31日1时4分

--- a/pages/p1/950947.md
+++ b/pages/p1/950947.md
@@ -1,4 +1,4 @@
-### 神明为什么会对某人特别严厉呢？(组图)
+### 语不惊人死不休？习近平国师再出“豪言”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
+  <img alt="林毅夫再次语出惊人" src="https://img3.secretchina.com/pic/2020/9-16/p2777251a4486295-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
+   林毅夫2008年3月7日在北京參加人民代表大會。（圖片來源：Getty Images／網絡圖片）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,28 +29,75 @@
   </div>
  </div>
  <p>
-  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
+  【看中国2020年10月31日讯】（看中国记者苏菲综合报导）从
+  <strong>
+   台湾
+  </strong>
+  叛逃到中国大陆、被称为
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+    习近平
+   </span>
+  </strong>
+  的经济“
+  <strong>
+   国师
+  </strong>
+  ”的北京大学国家发展研究院名誉院长
+  <strong>
+   林毅夫
+  </strong>
+  ，继上月重复5年前“中国5年后将成为高收入国家”的“豪言”后，10月28日，他再次语出惊人，称中国在人工智能、5G等领域有换道超车的优势，引来网民热议：“要想在大陆生存，就得像林毅夫这样学会睁眼说瞎话。”
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   修行人手摘香莲　惹怒莲花池神
-  </strong>
+  据多家媒体报道，10月28日，
+  <span href="https://zh.wikipedia.org/wiki/%E6%9E%97%E6%AF%85%E5%A4%AB" target="_blank">
+   林毅夫
+  </span>
+  在2020联想创新科技大会上演讲时称，“在互联网、人工智能、云计算、5G、万物互联的新产业革命上，我们有换道超车的优势。”
  </p>
  <p>
-  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
+  <span href="https://www.secretchina.com/news/gb/tag/林毅夫" target="_blank">
+   林毅夫
+  </span>
+  在演讲时称，因为这些产业的产品和技术的研发周期特别短，有利于像中国这样的人力资源大国。他还称，中国有全世界最完备的产业以及全世界最好的供应链，在这种短周期的新产业革命上，中国具备换道超车的优势，可以和发达国家齐头并进。
  </p>
  <p>
-  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
  </p>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   【习近平经济国师再发豪言】
+   <br>
+    【“中国在人工智能、5G等领域有换道超车的优势”】
+    <br>
+     <br>
+      经济学者林毅夫一向对中国经济发展非常乐观，周三他再发豪言，说中国在人工智能、5G等领域有换道超车的优势
+      <br>
+       <br>
+        他近日受访时说，中国未来五年会变为高收入国家，却被发现五年前已说过，被调侃“林毅夫的五年”
+        <span href="https://twitter.com/hashtag/%E6%9E%97%E6%AF%85%E5%A4%AB?src=hash&amp;ref_src=twsrc%5Etfw">
+         #林毅夫
+        </span>
+        <span href="https://t.co/Nk7oSTIJd9">
+         pic.twitter.com/Nk7oSTIJd9
+        </span>
+       </br>
+      </br>
+     </br>
+    </br>
+   </br>
+  </p>
+  — 自由亚洲电台 (@RFA_Chinese)
+  <span href="https://twitter.com/RFA_Chinese/status/1321363183320268800?ref_src=twsrc%5Etfw">
+   October 28, 2020
+  </span>
+ </blockquote>
  <p>
-  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
- </p>
- <p>
-  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
+  林毅夫此言一出，立即引发网民热议，“连买个芯片都要看美国的脸色买不到～还弯道超车咧？？见笑郎。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -65,7 +112,7 @@
   </div>
  </center>
  <p>
-  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
+  “哈哈哈，你这骗子，五年又五年……”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -80,7 +127,7 @@
   </div>
  </center>
  <p>
-  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
+  “众所周知，换道（弯道）时超车是最危险的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,7 +142,11 @@
   </div>
  </center>
  <p>
-  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
+  “
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  有很多这样的人，他们就是为国王织造新衣的骗子。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,25 +161,7 @@
   </div>
  </center>
  <p>
-  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
-  <br>
-   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
-  </br>
+  “它这一辈子，除了从金门岛游泳到福建向共产党投诚是真的之外，别的都是虚的，共产党不会信，它自己也不信，但是它必须这样'忠诚'，因为它游不回去了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -143,7 +176,22 @@
   </div>
  </center>
  <p>
-  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
+  “看来，这个林毅夫是‘语不惊人死不休’啊！但是，他除了会睁大眼睛说瞎话外，在中共体系下，还能干点什么？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  其实之前，林毅夫已经多次语出惊人，例如，今年9月，林毅夫在“2020国际投资论坛”上称，中国在2025年之前，人均收入可达到约人民币8万6200元，成为高收入经济体，但随后却被网民发现，早在2015年，他就讲过类似的“豪言壮语”，当时他声称，中国可能在2020年就能跻身高收入国家之列，被网友讥讽“忘了换讲稿”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,7 +210,7 @@
   </ins>
  </center>
  <p>
-  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
+  10月6日，他接受中共党媒多维网采访时又宣称，中国的经济规模，可能在2030年超过美国。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +225,7 @@
   </div>
  </center>
  <p>
-  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
+  对此，台湾中华经济与金融协会副秘书长曾志超认为，林毅夫早已偏离一个学者应有的本质，“变成标准的御用学者”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,7 +240,10 @@
   </div>
  </center>
  <p>
-  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
+  <span href="https://www.secretchina.com/news/gb/tag/毛泽东" target="_blank">
+   毛泽东
+  </span>
+  前秘书李锐的女儿李南央日前在接受自由亚洲电台采访时表示，中共党内现在只有以习近平为首的“生产大队长派”，习的周围完全就是一批“马屁精”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,7 +258,7 @@
   </div>
  </center>
  <p>
-  参考资料：民间故事
+  公开资料显示，林毅夫出生在台湾宜兰，原名林正义，后改林正谊，后再改为林毅夫。他幼时家境贫苦，母亲以洗衣谋生。1979年他担任台湾金门马山连连长时叛逃至中国大陆，台湾国防部对他已发布永久通缉令。目前林毅夫定居北京，为北大国家发展研究院名誉院长、第12届全国政协常委、全国政协经济委员会副主任、中华全国工商业联合会副主席（副部长级），与妻子陈云英育有两名子女。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,13 +322,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/950947.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/950947.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/950947.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/31/950947.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/950947.md' width='0px' height='0px'/>
